2009-05-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Cosmetic fixes.
	
	* include/slc.m4: Implement new macros sl_begin_header and
	sl_end_header.

	* include/slr.slh,
	* include/cstddef.slh,
	* include/cstdbool.slh,
	* include/cstdint.slh,
	* include/climits.slh,
	* include/svp/argslot.slh,
	* include/svp/assert.slh,
	* include/svp/div.slh,
	* include/svp/io.slh,
	* include/svp/iomacros.slh,
	* include/svp/lib.slh,
	* include/svp/perf.slh,
	* include/svp/roman.slh: Use it.

	* bin/slt.in: Ensure $colspertest is initialized even when
	TEXT_ONLY is set.

2009-05-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Clean up distribution.
	
	* Makefile.am: Add missing NEWS to EXTRA_DIST, which was
	forgotten. Enable test suite during distcheck.

	* configure.ac: Add CONFIG_STATUS_DEPENDENCIES and point to
	ChangeLog to properly capture SVN commits.

	* doc/HACKING.txt: Mention Automake 1.11. Request a SVN commit
	before `make dist'.

	* doc/NEWS.txt: bump version number.
	
2009-05-22  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* configure.ac: Capture SVN version number in Autoconf.

	* bin/Makefile.am,
	* bin/cce.in,
	* bin/slc.in,
	* bin/slr.in,
	* bin/slt.in: use it. Uniformize version numbers.

2009-05-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update to Automake 1.11. Cleanup build system.
	
	* Makefile.am,
	* lib/Makefile.am,
	* demo/Makefile.am,
	* tests.mk: Simplify. Move generic rules to...
	* sl.mk: here.

	* Makefile-reqs.orig, 
	* bootstrap,	
	* configure.ac: Update for latest release of Automake, and enable
	silent rules.

	* Makefile.am,
	* bin/Makefile.am,
	* lib/mtalpha.mk,
	* lib/seqc.mk,
	* lib/ptl.mk,
	* sl.mk: Use prefixes to silence custom slc build rules.

	* demo/Makefile.am: Coalesce DEMOS, EXTRA_DEMOS and ALL_DEMOS
	since no distinction exists any more.

2009-05-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Cosmetic changes. Reinstate support for compiling through the MG
	core compiler. Reinstate "xfail" tests.
	