@@ -1,5 +1,13 @@
 2009-05-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Start implementing call gate for function calls.
+	
+	* lib/mtalpha-sim/callgate.s: Add.
+	* lib/mtalpha.mk: Update accordingly.
+	* lib/t-pppalpha/slimpl.m4: Use it.
+
+2009-05-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Cosmetic fixes.
 	
 	* include/slc.m4: Implement new macros sl_begin_header and
